aplico modificaciones recomendadas por la tutora

--- a/css/main.css
+++ b/css/main.css
@@ -184,6 +184,7 @@ header{
     border-radius: 50%;
     border: 3px red solid;
     transform: scale(1.3);
+    transition: 200ms ease;
 }
 
 footer{
