--- a/css/main.css
+++ b/css/main.css
@@ -113,6 +113,8 @@ header{
 }
 
 .frase{
+    display: flex;
+    flex-direction: column;
     font-size: 30px;
     color: white;
     font-family: 'Anton', sans-serif;
@@ -121,7 +123,10 @@ header{
     animation-name: latir;
     animation-iteration-count: infinite;
     animation-duration: 2s;
+}
 
+.colorF{
+    color: red;
 }
 
 .sectionV{
