--- a/css/main.css
+++ b/css/main.css
@@ -363,7 +363,8 @@ footer h4{
 }
 
 .headerP{
-    background-color: rgba(255, 0, 0, 0.219); 
+    background-color: rgba(255, 0, 0, 0.219);
+    padding-bottom: 5px; 
 }
 
 .tPage{
