--- a/css/main.css
+++ b/css/main.css
@@ -363,7 +363,7 @@ footer h4{
 }
 
 .headerP{
-    background-color: rgba(255, 0, 0, 0.219);
+    background-image: linear-gradient(to right, rgba(255, 0, 0, 0.219), black, rgba(255, 0, 0, 0.219)); 
     padding-bottom: 5px; 
 }
 
@@ -460,7 +460,7 @@ footer h2{
 
 .headerC{
     grid-area: headerC;
-    background-color: rgba(255, 0, 0, 0.219);
+    background-image: linear-gradient(to right, rgba(255, 0, 0, 0.219), black, rgba(255, 0, 0, 0.219));
 }
 
 .headerC nav ul li a{
