maqueto page Sobre nosotros version mobile

--- a/css/main.css
+++ b/css/main.css
@@ -394,6 +394,11 @@ footer h4{
     color:red;
 }
 
+.headerP nav ul li:hover{
+    transform: scale(1.1);
+    transition: 1s;
+}
+
 .menu2{
     text-align: center;
     background-color: rgba(0, 0, 0, 0.87);
@@ -474,6 +479,11 @@ footer h2{
     text-decoration: none;
     font-family: 'Bebas Neue', cursive; 
     color:red;
+}
+
+.headerC nav ul li:hover{
+    transform: scale(1.1);
+    transition: 1s;
 }
 
 .info{
@@ -641,7 +651,6 @@ footer h2{
         margin: 10px;
     }
     
-    
     .formT{
         font-size: 25px;
         margin-top: 5px;
@@ -698,6 +707,11 @@ footer h2{
     color:red;
 }
 
+.headerSn nav ul li:hover{
+    transform: scale(1.1);
+    transition: 1s;
+}
+
 .mainSn{
     grid-area: mainSn;
 }
@@ -729,7 +743,7 @@ footer h2{
 
 .img{
     width: 400px;
-    border: solid rgba(0, 0, 0, 0.87) 5px
+    border: solid rgba(0, 0, 0, 0.87) 5px;
 }
 
 .footerSn{
@@ -737,6 +751,45 @@ footer h2{
     color: white;
     font-family: 'Roboto', sans-serif;
     font-size: 10px;
+}
+
+/* media querie- version mobile de page sobre nosotros */
+
+@media only screen and (max-width:600px){
+    .bodySn{
+        height: 100vh;
+        display: grid;
+    
+        grid-template-areas:"headerSn headerSn"
+                            "mainSn mainSn"
+                            "mainSn mainSn"
+                            "equipo equipo"
+                            "equipo equipo"
+                            "equipo equipo"
+                            "footerSn footerSn";
+    }
+
+    
+    .historia{
+        margin-top: 5px;
+        font-size: 15px;
+        padding: 5px 1px 5px 1px;
+        margin-bottom: 10px;
+    }
+    
+    .tHistoria{
+        font-size: 20px;
+    }
+    
+    .equipo{
+        grid-area: equipo;
+        text-align: center;
+        padding: 5px;
+    }
+    
+    .img{
+        width: 190px;
+    }
 }
 
 /* -------------- galeria---------- */
