--- a/scss/utilities/_MQIndex.scss
+++ b/scss/utilities/_MQIndex.scss
@@ -1,4 +1,4 @@
-// media querie version movile
+// media querie version movile del index
 
 @media only screen and (min-width:320px) and (max-width:599px){
     body{
