modifico estilos.scss

--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -180,7 +180,7 @@ body{
                         }
 }
 
-/* index version mobile del index*/ 
+/* index version mobile*/ 
 @import "utilities/MQIndex";
 
 /* contactanos*/
