--- a/css/main.css
+++ b/css/main.css
@@ -12,7 +12,11 @@ body {
 .bodyIndex {
   height: 100vh;
   display: grid;
-  grid-template-areas: "header header header" "sectionM sectionM sectionM" "sectionF redes sectionV" "sectionF redes sectionV" "footer footer footer"; }
+  grid-template-areas: "header header header"
+ "sectionM sectionM sectionM"
+ "sectionF redes sectionV"
+ "sectionF redes sectionV"
+ "footer footer footer"; }
   .bodyIndex .headerI {
     grid-area: header;
     background-image: linear-gradient(to right, rgba(255, 0, 0, 0.219), black, rgba(255, 0, 0, 0.219));
@@ -150,7 +154,13 @@ body {
   .bodyIndex {
     height: 100vh;
     display: grid;
-    grid-template-areas: "header header" "sectionM sectionF" "sectionM sectionF" "sectionM sectionV" "sectionM sectionV" "redes redes" "footer footer"; }
+    grid-template-areas: "header header"
+ "sectionM sectionF"
+ "sectionM sectionF"
+ "sectionM sectionV"
+ "sectionM sectionV"
+ "redes redes"
+ "footer footer"; }
     .bodyIndex .headerI {
       grid-area: header;
       padding-bottom: 10px; }
@@ -199,7 +209,14 @@ body {
   background-image: url(../img/fondoNegro.jpg);
   background-size: cover;
   background-repeat: repeat;
-  grid-template-areas: "headerC headerC headerC" "info info info" "info info info" "redesC redesC redesC" "formu formu formu" "formu formu formu" "formu formu formu" "footerC footerC footerC"; }
+  grid-template-areas: "headerC headerC headerC"
+ "info info info"
+ "info info info"
+ "redesC redesC redesC"
+ "formu formu formu"
+ "formu formu formu"
+ "formu formu formu"
+ "footerC footerC footerC"; }
   .bodyC .headerC {
     grid-area: headerC;
     background-image: linear-gradient(to right, rgba(255, 0, 0, 0.219), black, rgba(255, 0, 0, 0.219)); }
@@ -340,7 +357,13 @@ body {
   background-image: url(../img/fondoNegro.jpg);
   background-size: cover;
   background-repeat: repeat;
-  grid-template-areas: "headerSn headerSn headerSn" "mainSn mainSn mainSn" "mainSn mainSn mainSn" "equipo equipo equipo" "equipo equipo equipo" "equipo equipo equipo" "footerSn footerSn footerSn"; }
+  grid-template-areas: "headerSn headerSn headerSn"
+ "mainSn mainSn mainSn"
+ "mainSn mainSn mainSn"
+ "equipo equipo equipo"
+ "equipo equipo equipo"
+ "equipo equipo equipo"
+ "footerSn footerSn footerSn"; }
   .bodySn .headerSn {
     grid-area: headerSn;
     background-image: linear-gradient(to right, rgba(255, 0, 0, 0.219), black, rgba(255, 0, 0, 0.219)); }
@@ -422,7 +445,13 @@ body {
   background-image: url(../img/fondoNegro.jpg);
   background-size: cover;
   background-repeat: repeat;
-  grid-template-areas: "headerA headerA headerA" "headerA headerA headerA" "mainA mainA mainA" "mainA mainA mainA" "mainA mainA mainA" "mainA mainA mainA" "footerA footerA footerA"; }
+  grid-template-areas: "headerA headerA headerA"
+ "headerA headerA headerA"
+ "mainA mainA mainA"
+ "mainA mainA mainA"
+ "mainA mainA mainA"
+ "mainA mainA mainA"
+ "footerA footerA footerA"; }
   .bodyA .headerA {
     grid-area: headerA;
     background-image: linear-gradient(to right, rgba(255, 0, 0, 0.219), black, rgba(255, 0, 0, 0.219));
@@ -498,7 +527,13 @@ body {
   background-image: url(../img/fondoNegro.jpg);
   background-size: cover;
   background-repeat: repeat;
-  grid-template-areas: "headerG headerG headerG" "headerG headerG headerG" "mainG mainG mainG" "mainG mainG mainG" "mainG mainG mainG" "mainG mainG mainG" "footerG footerG footerG"; }
+  grid-template-areas: "headerG headerG headerG"
+ "headerG headerG headerG"
+ "mainG mainG mainG"
+ "mainG mainG mainG"
+ "mainG mainG mainG"
+ "mainG mainG mainG"
+ "footerG footerG footerG"; }
   .bodyG .headerG {
     grid-area: headerA;
     background-image: linear-gradient(to right, rgba(255, 0, 0, 0.219), black, rgba(255, 0, 0, 0.219));
