--- a/css/main.css
+++ b/css/main.css
@@ -22,7 +22,7 @@ body {
         width: 150px;
         border-radius: 50%;
         border: 5px solid rgba(0, 0, 0, 0.87); }
-      .bodyIndex .headerI nav div #navbarNav ul li {
+      .bodyIndex .headerI nav div #navbarSupportedContent ul li {
         background-color: rgba(255, 0, 0, 0.219);
         font-size: 30px;
         padding-left: 1rem;
@@ -30,15 +30,15 @@ body {
         margin-right: 2rem;
         margin-left: 3rem;
         border: 1px white solid; }
-        .bodyIndex .headerI nav div #navbarNav ul li:hover {
+        .bodyIndex .headerI nav div #navbarSupportedContent ul li:hover {
           transform: scale(1.1);
           transition: 1s; }
-        .bodyIndex .headerI nav div #navbarNav ul li a {
+        .bodyIndex .headerI nav div #navbarSupportedContent ul li a {
           text-decoration: none;
           font-family: 'Bebas Neue', cursive;
           color: white;
           text-shadow: 2px 2px rgba(0, 0, 0, 0.87); }
-          .bodyIndex .headerI nav div #navbarNav ul li a:hover {
+          .bodyIndex .headerI nav div #navbarSupportedContent ul li a:hover {
             text-decoration: none;
             font-family: 'Bebas Neue', cursive;
             color: red;
@@ -130,7 +130,8 @@ body {
     grid-area: footer;
     display: flex;
     align-items: flex-end;
-    justify-content: end; }
+    justify-content: end;
+    background-color: rgba(0, 0, 0, 0.87); }
     .bodyIndex footer h4 {
       color: white;
       text-shadow: 2px 2px rgba(255, 0, 0, 0.219);
@@ -141,53 +142,39 @@ body {
 /* index version mobile */
 @media only screen and (min-width: 320px) and (max-width: 599px) {
   body {
-    background-image: url(../img/fondo4.jpg);
+    background-image: url(../../img/fondoNegro.jpg);
     background-size: cover;
-    background-repeat: no-repeat; }
-  .bodyIndex {
-    height: 100vh;
-    display: grid;
-    grid-template-areas: "headerI headerI" "sectionM sectionM" "sectionF sectionV" "sectionF sectionV" "redes redes" "footer footer"; }
-    .bodyIndex .headerI {
-      grid-area: headerI;
-      padding-bottom: 10px; }
-      .bodyIndex .headerI div img {
-        width: 60px; }
-      .bodyIndex .headerI div h1 {
-        margin-top: -3rem;
-        font-size: 28px;
-        margin-left: 30px; }
-      .bodyIndex .headerI div h2 {
-        margin-bottom: 10px;
-        font-size: 18px; }
-    .bodyIndex .sectionM nav {
-      padding-top: 1px;
-      padding-bottom: 1px;
-      margin-bottom: 10px;
-      margin-top: 50px; }
-      .bodyIndex .sectionM nav ul li {
-        display: block;
-        font-size: 25px;
-        margin: 30px; }
-    .bodyIndex .sectionF p {
-      font-size: 25px;
-      margin-left: 60px;
-      margin-top: 60px; }
-    .bodyIndex .sectionV {
-      display: flex;
-      align-items: flex-end; }
-      .bodyIndex .sectionV video {
-        width: 230px;
-        margin-bottom: 5rem;
-        margin-right: 2rem; }
-    .bodyIndex .sectionR .redes {
-      margin-top: 30px; }
-    .bodyIndex .sectionR .redes2 a {
-      margin: 15px; }
-    .bodyIndex .sectionR .redes2 img {
-      width: 50px; }
-    .bodyIndex .footerI h4 {
-      font-size: 10px; } }
+    background-repeat: repeat; }
+    body .bodyIndex {
+      height: 100vh;
+      display: grid;
+      grid-template-areas: "headerI headerI" "sectionM sectionM" "redes redes" "sectionF sectionV" "sectionF sectionV" "footer footer"; }
+      body .bodyIndex .headerI nav {
+        background-image: linear-gradient(to right, rgba(0, 0, 0, 0.87), rgba(0, 0, 0, 0.87));
+        margin-bottom: 0.3rem; }
+        body .bodyIndex .headerI nav div img {
+          width: 100px; }
+        body .bodyIndex .headerI nav div #navbarSupportedContent ul li {
+          text-align: start;
+          background-color: rgba(2, 2, 2, 0);
+          font-size: 25px;
+          padding-left: 0rem;
+          padding-right: 0rem;
+          margin-right: 0rem;
+          margin-left: 1.5rem;
+          border: none; }
+        body .bodyIndex .headerI nav div #navbarSupportedContent ul a {
+          text-shadow: 2px 2px rgba(255, 0, 0, 0.219); }
+      body .bodyIndex .sectionM {
+        padding-bottom: 0.5rem; }
+        body .bodyIndex .sectionM div h2 {
+          margin-bottom: 1rem; }
+      body .bodyIndex .sectionF {
+        margin-left: 0.2rem; }
+        body .bodyIndex .sectionF p {
+          font-size: 35px;
+          margin-left: 1rem;
+          margin-top: 1rem; } }
 
 /* contactanos*/
 .bodyC {
@@ -204,7 +191,7 @@ body {
       width: 150px;
       border-radius: 50%;
       border: 5px solid rgba(0, 0, 0, 0.87); }
-    .bodyC .headerC nav div #navbarNav ul li {
+    .bodyC .headerC nav div #navbarSupportedContent ul li {
       background-color: rgba(255, 0, 0, 0.219);
       font-size: 30px;
       padding-left: 1rem;
@@ -212,15 +199,15 @@ body {
       margin-right: 2rem;
       margin-left: 3rem;
       border: 1px white solid; }
-      .bodyC .headerC nav div #navbarNav ul li:hover {
+      .bodyC .headerC nav div #navbarSupportedContent ul li:hover {
         transform: scale(1.1);
         transition: 1s; }
-      .bodyC .headerC nav div #navbarNav ul li a {
+      .bodyC .headerC nav div #navbarSupportedContent ul li a {
         text-decoration: none;
         font-family: 'Bebas Neue', cursive;
         color: white;
         text-shadow: 2px 2px rgba(0, 0, 0, 0.87); }
-        .bodyC .headerC nav div #navbarNav ul li a:hover {
+        .bodyC .headerC nav div #navbarSupportedContent ul li a:hover {
           text-decoration: none;
           font-family: 'Bebas Neue', cursive;
           color: red;
@@ -345,7 +332,7 @@ body {
       width: 150px;
       border-radius: 50%;
       border: 5px solid rgba(0, 0, 0, 0.87); }
-    .bodySn .headerSn nav div #navbarNav ul li {
+    .bodySn .headerSn nav div #navbarSupportedContent ul li {
       background-color: rgba(255, 0, 0, 0.219);
       font-size: 30px;
       padding-left: 1rem;
@@ -353,15 +340,15 @@ body {
       margin-right: 2rem;
       margin-left: 3rem;
       border: 1px white solid; }
-      .bodySn .headerSn nav div #navbarNav ul li:hover {
+      .bodySn .headerSn nav div #navbarSupportedContent ul li:hover {
         transform: scale(1.1);
         transition: 1s; }
-      .bodySn .headerSn nav div #navbarNav ul li a {
+      .bodySn .headerSn nav div #navbarSupportedContent ul li a {
         text-decoration: none;
         font-family: 'Bebas Neue', cursive;
         color: white;
         text-shadow: 2px 2px rgba(0, 0, 0, 0.87); }
-        .bodySn .headerSn nav div #navbarNav ul li a:hover {
+        .bodySn .headerSn nav div #navbarSupportedContent ul li a:hover {
           text-decoration: none;
           font-family: 'Bebas Neue', cursive;
           color: red;
@@ -424,7 +411,7 @@ body {
       width: 150px;
       border-radius: 50%;
       border: 5px solid rgba(0, 0, 0, 0.87); }
-    .bodyA .headerA nav div #navbarNav ul li {
+    .bodyA .headerA nav div #navbarSupportedContent ul li {
       background-color: rgba(255, 0, 0, 0.219);
       font-size: 30px;
       padding-left: 1rem;
@@ -432,15 +419,15 @@ body {
       margin-right: 2rem;
       margin-left: 3rem;
       border: 1px white solid; }
-      .bodyA .headerA nav div #navbarNav ul li:hover {
+      .bodyA .headerA nav div #navbarSupportedContent ul li:hover {
         transform: scale(1.1);
         transition: 1s; }
-      .bodyA .headerA nav div #navbarNav ul li a {
+      .bodyA .headerA nav div #navbarSupportedContent ul li a {
         text-decoration: none;
         font-family: 'Bebas Neue', cursive;
         color: white;
         text-shadow: 2px 2px rgba(0, 0, 0, 0.87); }
-        .bodyA .headerA nav div #navbarNav ul li a:hover {
+        .bodyA .headerA nav div #navbarSupportedContent ul li a:hover {
           text-decoration: none;
           font-family: 'Bebas Neue', cursive;
           color: red;
@@ -499,7 +486,7 @@ body {
       width: 150px;
       border-radius: 50%;
       border: 5px solid rgba(0, 0, 0, 0.87); }
-    .bodyG .headerG nav div #navbarNav ul li {
+    .bodyG .headerG nav div #navbarSupportedContent ul li {
       background-color: rgba(255, 0, 0, 0.219);
       font-size: 30px;
       padding-left: 1rem;
@@ -507,15 +494,15 @@ body {
       margin-right: 2rem;
       margin-left: 3rem;
       border: 1px white solid; }
-      .bodyG .headerG nav div #navbarNav ul li:hover {
+      .bodyG .headerG nav div #navbarSupportedContent ul li:hover {
         transform: scale(1.1);
         transition: 1s; }
-      .bodyG .headerG nav div #navbarNav ul li a {
+      .bodyG .headerG nav div #navbarSupportedContent ul li a {
         text-decoration: none;
         font-family: 'Bebas Neue', cursive;
         color: white;
         text-shadow: 2px 2px rgba(0, 0, 0, 0.87); }
-        .bodyG .headerG nav div #navbarNav ul li a:hover {
+        .bodyG .headerG nav div #navbarSupportedContent ul li a:hover {
           text-decoration: none;
           font-family: 'Bebas Neue', cursive;
           color: red;
