--- a/scss/utilities/_MQIndex.scss
+++ b/scss/utilities/_MQIndex.scss
@@ -2,86 +2,71 @@
 
 @media only screen and (min-width:320px) and (max-width:599px){
     body{
-        background-image: url(../img/fondo4.jpg);
+        background-image: url(../../img/fondoNegro.jpg);
         background-size: cover;
-        background-repeat: no-repeat;
-    }
-
-.bodyIndex{
-        height: 100vh;
-        display: grid;
-        grid-template-areas:"headerI headerI"
-                            "sectionM sectionM"
-                            "sectionF sectionV"
-                            "sectionF sectionV"
-                            "redes redes"
-                            "footer footer";
-    .headerI{
-        grid-area: headerI;
-        padding-bottom: 10px;
-            div{
-                img{
-                    width: 60px;
-                }
-                h1{
-                    margin-top: -3rem;
-                    font-size: 28px;
-                    margin-left: 30px; 
-                }
-                h2{
-                    margin-bottom: 10px;
-                    font-size: 18px;
-                }
-            }
-        }
-        .sectionM{
-            nav{
-                padding-top:1px;
-                padding-bottom: 1px;
-                margin-bottom: 10px;
-                margin-top: 50px;
-                ul{
-                    li{
-                        display: block;
-                        font-size: 25px;
-                        margin: 30px; 
+        background-repeat: repeat;
+        .bodyIndex{
+            height: 100vh;
+            display: grid;
+            grid-template-areas:"headerI headerI"
+                                "sectionM sectionM"
+                                "redes redes"
+                                "sectionF sectionV"
+                                "sectionF sectionV"
+                                "footer footer";
+            .headerI{
+                nav{
+                    background-image:linear-gradient(to right, $colorN, $colorN);
+                    margin-bottom: 0.3rem;
+                    div{
+                        img{
+                            width: 100px;
+                        }
+                        #navbarSupportedContent{
+                            ul{
+                                li{
+                                    text-align:start;
+                                    background-color: rgba(2, 2, 2, 0);
+                                    font-size: 25px;
+                                    padding-left: 0rem;
+                                    padding-right: 0rem;
+                                    margin-right: 0rem;
+                                    margin-left: 1.5rem;
+                                    border: none;
+                                }
+                                a{ 
+                                    text-shadow: 2px 2px $colorR;
+                                }
+                            }
+                        }
                     }
                 }
             }
-        }
-        .sectionF{
-            p{
-                font-size: 25px;
-                margin-left: 60px;
-                margin-top: 60px; 
-            }
-        }
-        .sectionV{
-            display: flex;
-            align-items: flex-end;
-            video{
-                width: 230px;
-                margin-bottom: 5rem;
-                margin-right: 2rem;
-            }
-        }
-        .sectionR{
-            .redes{
-                margin-top: 30px;
-            }
-            .redes2{
-                a{
-                    margin: 15px;
-                }
-                img{
-                    width: 50px; 
+            .sectionM{
+                padding-bottom: 0.5rem;
+                div{
+                    h1{
+                        
+                    }
+                    h2{
+                        margin-bottom: 1rem;
+                    }
                 }
             }
-        }
-        .footerI{
-            h4{
-                font-size: 10px ; 
+            .sectionF{
+                margin-left: 0.2rem;
+                p{
+                    font-size: 35px;
+                    margin-left: 1rem;
+                    margin-top: 1rem;
+                }
+            }
+            .sectionV{
+                // seguir desde aca
             }
         }
-    }
-}  
+    }    
+}
+
+    
+ 
